tests/rosetta/transpiler/Pascal/balanced-ternary.error
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/rosetta/transpiler/Pascal/balanced-ternary.pas
fgl.pp(1668,8) Note: Call to subroutine "function TFPGMap<System.ShortString,System.Variant>.IndexOf(const AKey:ShortString):LongInt;" marked as inline is not inlined
balanced-ternary.pas(61,3) Note: Call to subroutine "procedure TFPGMap<System.ShortString,System.Variant>.AddOrSetData(const AKey:ShortString;const AData:Variant);" marked as inline is not inlined
balanced-ternary.pas(62,3) Note: Call to subroutine "procedure TFPGMap<System.ShortString,System.Variant>.AddOrSetData(const AKey:ShortString;const AData:Variant);" marked as inline is not inlined
balanced-ternary.pas(62,42) Note: Call to subroutine "operator :=(const source:Boolean):Variant;" marked as inline is not inlined
balanced-ternary.pas(67,3) Note: Call to subroutine "procedure TFPGMap<System.ShortString,System.Variant>.AddOrSetData(const AKey:ShortString;const AData:Variant);" marked as inline is not inlined
balanced-ternary.pas(67,40) Note: Call to subroutine "operator :=(const source:UCS4String):Variant;" marked as inline is not inlined
balanced-ternary.pas(68,3) Note: Call to subroutine "procedure TFPGMap<System.ShortString,System.Variant>.AddOrSetData(const AKey:ShortString;const AData:Variant);" marked as inline is not inlined
balanced-ternary.pas(68,43) Note: Call to subroutine "operator :=(const source:Boolean):Variant;" marked as inline is not inlined
balanced-ternary.pas(238,15) Error: Incompatible type for arg no. 2: Got "LongInt", expected "IntArray"
balanced-ternary.pas(240,20) Error: Incompatible type for arg no. 2: Got "LongInt", expected "IntArray"
balanced-ternary.pas(241,49) Error: Incompatible type for arg no. 1: Got "LongInt", expected "IntArray"
balanced-ternary.pas(257) Fatal: There were 3 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
